--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
          <footer class="controls">
             <audio id="audio" src="manifesto.mp3" preload="auto" playsinline></audio>
             <button id="play" class="btn">▶ manifesto</button>
-            <a href="https://uniscan.cc/inscription/106004490" target="_blank" class="btn">on chain</a>
+            <a href="https://ordiscan.com/inscription/106004490" target="_blank" class="btn">on chain</a>
             <a href="https://nostr.band/npub1kc9weag9hjf0p0xz5naamts48rdkzymucvrd9ws8ns7n4x3qq5gsljlnck" target="_blank" class="btn">nostr</a>
          </footer>
       </div>
